assets/scss/pages/_index.scss
.banner-hero {
  background-image: url(/assets/images/banner.png);
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center center;
  padding: 289px 0;

  @include breakpoint-md {
    background-image: url(/assets/images/banner-sm.png);
    padding: 155px 0;
  }
}
.section-hero {
  margin-left: 200px;

  @include breakpoint-md {
    margin-left: 24px;
  }
}

.badge-hotsale {
  color: $primary-400;
  background-color: $primary-100;
  padding: 8px 12px;
  font-size: 14px;
}

.banner-collab {
  background-image: url(/assets/images/banner-co-branded.png);
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;

  @include breakpoint-md {
    background-image: url(/assets/images/banner-co-branded-sm.png);
  }
}
.section-collab {
  padding: 100px 0;
  max-width: 100%;

  p {
    font-weight: 400;
  }
}
.symbol-collab {
  margin: 0 24px;
  vertical-align: top;
}

.mask {
  background-color: rgba(0, 0, 0, 0.4);
  width: 100%;
  height: 100%;
}

.horizontal-scroll-md-row {
  @include breakpoint-md {
    margin-left: -8px;
    margin-right: -8px;
  }
}
.horizontal-scroll-md-col {
  @include breakpoint-md {
    min-width: 316px;
    padding-left: 8px;
    padding-right: 8px;
  }
}

@include breakpoint-md {
  .inspiration-row-md {
    flex-wrap: nowrap;
    margin-left: -8px;
    margin-right: -8px;
  }
  .inspiration-col-md {
    padding-left: 8px;
    padding-right: 8px;

    img {
      min-width: 300px;
    }
  }
}

